# RealEngine

./: CMakeLists.txt  README.md
dependencies/glad/: CMakeLists.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
docs/: Event system.txt  ImGUI.txt  animated sprite.txt  comment template.txt  shaders.txt  sprite.txt
res/shaders/: DebugFragmentShader.txt  fragmentShader.txt  lightFragmentShader.txt  lightVertexShader.txt  spriteFragmentShader.txt  spriteVertexShader.txt  vertexShader.txt
src/: main.cpp
src/Game/: Game.h
src/Input/: Input.cpp  Input.h
src/Modules/: GUIModule.cpp  GUIModule.h  Random.cpp  Random.h  Time.cpp  Time.h
src/Render/: AnimatedSprite.cpp  AnimatedSprite.h  Camera.cpp  Camera.h  Event.h  Primitives.cpp  Renderer.cpp  Renderer.h  ShaderProgram.cpp  ShaderProgram.h  Sprite.cpp  Sprite.h  Texture2D.cpp  Texture2D.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  Window.cpp  Window.h
src/Render/Events/: KeyboardEvent.h  MouseEvent.h  WindowEvent.h
src/Resources/: ResourceManager.cpp  ResourceManager.h
